remove proprietary sun code dependencies, namely com.sun.image.codec.jpeg.JPEGDecodeParam; sun.misc.BASE64Encoder
replaced Base64 code with public domain code from
http://iharder.sourceforge.net/current/java/base64/